--- a/task-12-july/function.html
+++ b/task-12-july/function.html
@@ -6,8 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="exersices1.js"></script>
-    <!-- <script src="exersices2.js"></script> -->
-    <!-- <script src="exersices3.js"></script> -->
+    <script src="function.js"></script>
 </body>
 </html>
