--- a/task 13-7/task2.html
+++ b/task 13-7/task2.html
@@ -6,12 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    <select class="flag" id="FLAG">
+    <select  id="FLAG">
 <option value="jordan">jordan</option>
 
 <option value="PALASTAIN">PALASTAIN</option>
 
-    </select>
+</select>
 
     <script src="task2.js"></script>
 </body>
